:memo: Update the readme and add some details about the compilation + :warning_lighter: Change the compilation to test all the FLUPS library

--- a/test/Makefile
+++ b/test/Makefile
@@ -23,7 +23,7 @@
 
 ################################################################################
 # ARCH DEPENDENT VARIABLES
-ARCH_FILE ?= make_arch/make.default
+ARCH_FILE ?= make_arch/make.docker_gcc_test
 include ../$(ARCH_FILE)
 
 ################################################################################
@@ -33,6 +33,8 @@ NAME := flups
 # executable naming
 TARGET_EXE_A2A := $(NAME)_test_a2a
 TARGET_EXE_NB := $(NAME)_test_nb
+TARGET_EXE_DPREC_A2A := $(NAME)_test_dprec_a2a
+TARGET_EXE_DPREC_NB := $(NAME)_test_dprec_nb
 
 #-----------------------------------------------------------------------------
 BUILDDIR := ./build
@@ -104,11 +106,15 @@ $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp $(HEAD)
 ################################################################################
 default: all
 
-all: info $(TARGET_EXE_A2A) $(TARGET_EXE_NB)
+all: info $(TARGET_EXE_A2A) $(TARGET_EXE_NB) $(TARGET_EXE_DPREC_A2A) $(TARGET_EXE_DPREC_NB)
 
-all2all: $(TARGET_EXE_A2A)
+all2all: $(TARGET_EXE_A2A)  
 
-nonblocking: $(TARGET_EXE_NB)
+nonblocking: $(TARGET_EXE_NB) 
+
+all2all_dprec: $(TARGET_EXE_DPREC_A2A)
+
+nonblocking: $(TARGET_EXE_DPREC_NB)
 
 $(TARGET_EXE_A2A): $(OBJ)
 	$(CXX) $(LDFLAGS)  $^ -o $@ -L$(FLUPS_LIB) -lflups_a2a -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
@@ -116,14 +122,20 @@ $(TARGET_EXE_A2A): $(OBJ)
 $(TARGET_EXE_NB): $(OBJ)
 	$(CXX) $(LDFLAGS) $^ -o $@ -L$(FLUPS_LIB) -lflups_nb -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
 
+$(TARGET_EXE_DPREC_NB): $(OBJ)
+	$(CXX) $(LDFLAGS) $^ -o $@ -L$(FLUPS_LIB) -lflups_dprec_nb -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
+
+$(TARGET_EXE_DPREC_A2A): $(OBJ)
+	$(CXX) $(LDFLAGS) $^ -o $@ -L$(FLUPS_LIB) -lflups_dprec_a2a -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
+
 clean:
 	rm -f $(OBJ_DIR)/*.o
 	rm -f $(TARGET_EXE_A2A)
 	rm -f $(TARGET_EXE_NB)
+	rm -f $(TARGET_EXE_DPREC_A2A)
+	rm -f $(TARGET_EXE_DPREC_NB)
 
-destroy:
-	rm -f $(TARGET_EXE_A2A)
-	rm -f $(TARGET_EXE_NB)
+destroy: clean
 	rm -f $(OBJ_DIR)/*
 	rm -rf include
 	rm -rf lib
