:bug: :whale: add the missing know-host detection

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,9 +7,7 @@
 	// Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
 	// "dockerFile": "docker/Dockerfile",
 	// Rather use an image from DockerHub, first download it or build it
-	// "image": "immc/flups-valid:v0.4",
-	// "image": "vanreeslab/flups:v0.5",
-	"image": "vanreeslab/murphy:v1.15",
+	"image": "vanreeslab/flups:v1.0",
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
 		"terminal.integrated.shell.linux": null
