--- a/.gitlab-ci/flups-test.yml
+++ b/.gitlab-ci/flups-test.yml
@@ -21,7 +21,7 @@ run serial a2a 1:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a -bc 3 3 3 3 3 3
+    - ./flups_validation_a2a --bc=3,3,3,3,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333333_typeGreen=0.txt'))"
   
 
@@ -38,7 +38,7 @@ run serial a2a 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a -bc 0 1 4 4 1 1
+    - ./flups_validation_a2a --bc=0,1,4,4,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_014411_typeGreen=0.txt'))"
   
 
@@ -54,7 +54,7 @@ run serial a2a 3:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a -bc 3 3 1 4 1 1
+    - ./flups_validation_a2a --bc=3 3 1 4 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -70,7 +70,7 @@ run serial a2a 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a -bc 3 3 0 0 1 1
+    - ./flups_validation_a2a --bc=3 3 0 0 1 1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_330011_typeGreen=0.txt'))"
   
 
@@ -88,7 +88,7 @@ run MPI a2a 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 4
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4,4
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=0.txt'))"
   
 
@@ -104,7 +104,7 @@ run MPI a2a 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 -k 2
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4 --k=2 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=2.txt'))"
   
 
@@ -120,7 +120,7 @@ run MPI a2a 3:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 32 32 32 -bc 3 3 1 4 1 1
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32  --bc=3,3,1,4,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -136,7 +136,7 @@ run MPI a2a 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 3 3
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411433_typeGreen=0.txt'))"
     
 
@@ -152,7 +152,7 @@ run MPI a2a 5:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 17 17 17 -bc 4 4 3 3 1 0
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=17,17,17  --bc=4,4,3,3,1,0
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_443310_typeGreen=0.txt'))"
   
     
@@ -168,7 +168,7 @@ run MPI a2a 6:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bc 1 1 4 1 1 1 
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17  --bc=1,1,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_114111_typeGreen=0.txt'))"
   
 
@@ -187,7 +187,7 @@ run MPI-OMP a2a 1:1:
     - cd ./samples/validation/
     - export OMP_NUM_THREADS=2
     - echo $OMP_NUM_THREADS
-    - mpirun -np 2 ./flups_validation_a2a -np 1 2 1 -res 32 32 32 -bc 4 1 4 4 3 3
+    - mpirun -np 2 ./flups_validation_a2a --np=1,2,1 --res=32,32,32  --bc=4,1,4,4,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_414433_typeGreen=0.txt'))"
 
 run comm a2a 1:1:
@@ -202,7 +202,7 @@ run comm a2a 1:1:
     - compil comm
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a -np 2 2 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=17,17,17  --bc=3,3,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 
@@ -218,7 +218,7 @@ run comm a2a 2:1:
     - compil comm
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17  --bc=3,3,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 run 2d 1:1:
@@ -233,7 +233,7 @@ run 2d 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 1 -L 1 1 0 -bc 0 4 4 1 9 9 -k 1
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=0,4,4,1,9,9 --k=1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_044199_typeGreen=1.txt'))"
 
 run 2d 2:1:
@@ -248,7 +248,7 @@ run 2d 2:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 1 -L 1 1 0 -bc 4 4 3 3 9 9 -k 3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=,17,17,1 --L=1,1,0  --bc=4,4,3,3,9,9 --k=3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_443399_typeGreen=3.txt'))"
 
 
@@ -264,7 +264,7 @@ run 2d 3:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 1 -L 1 1 0 -bc 1 0 4 1 9 9 -k 0
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=1,0,4,1,9,9 --k=0
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_104199_typeGreen=0.txt'))"
     
 
@@ -280,7 +280,7 @@ run 2d 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 1 -L 1 1 0 -bc 3 3 3 3 9 9 -k 1
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=3,3,3,3,9,9 --k=1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333399_typeGreen=1.txt'))"
 
 
@@ -298,9 +298,9 @@ run 2d 4:1:
 #   script:
 #     - cd ./samples/validation/
 #     - mkdir prof
-#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_a2a -np 2 1 2 -res 16 16 16 -bc 4 4 4 4 4 4 
+#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_a2a --np=2,1,2 --res=16,16,16  --bc=4,4,4,4,4,4 
 #     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_444444_typeGreen=0.txt'))"
-#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_nb -np 2 2 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+#     - mpirun --mca btl_vader_single_copy_mechanism none -np 4 ./flups_validation_nb --np=2,2,1 --res=17,17,17  --bc=3,3,4,1,1,1 
 #     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 ################################################################################
@@ -318,7 +318,7 @@ run serial nb 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_nb -bc 3 3 3 3 3 3
+    - ./flups_validation_nb  --bc=3,3,3,3,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333333_typeGreen=0.txt'))"
 
 
@@ -335,7 +335,7 @@ run serial nb 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_nb -bc 0 1 4 4 1 1
+    - ./flups_validation_nb  --bc=0,1,4,4,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_014411_typeGreen=0.txt'))"
 
 
@@ -351,7 +351,7 @@ run serial nb 3:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_nb -bc 3 3 1 4 1 1
+    - ./flups_validation_nb  --bc=3,3,1,4,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -367,7 +367,7 @@ run serial nb 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_nb -bc 3 3 0 0 1 1
+    - ./flups_validation_nb  --bc=3,3,0,0,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_330011_typeGreen=0.txt'))"
   
 
@@ -385,7 +385,7 @@ run MPI nb 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 4
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 4
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=0.txt'))"
   
 
@@ -401,7 +401,7 @@ run MPI nb 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 4 4 -k 2
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 --k=2
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=2.txt'))"
   
 
@@ -417,7 +417,7 @@ run MPI nb 3:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 32 32 32 -bc 3 3 1 4 1 1
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=3,3,1,4,1,1
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -433,7 +433,7 @@ run MPI nb 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 32 32 32 -bc 4 1 1 4 3 3
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411433_typeGreen=0.txt'))"
     
 
@@ -449,7 +449,7 @@ run MPI nb 5:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 17 17 17 -bc 4 4 3 3 1 0
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=17,17,17 --bc=4,4,3,3,1,0
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_443310_typeGreen=0.txt'))"
   
     
@@ -465,7 +465,7 @@ run MPI nb 6:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bc 1 1 4 1 1 1 
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bc=1,1,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_114111_typeGreen=0.txt'))"
   
 
@@ -484,7 +484,7 @@ run MPI-OMP nb 1:1:
     - cd ./samples/validation/
     - export OMP_NUM_THREADS=2
     - echo $OMP_NUM_THREADS
-    - mpirun -np 2 ./flups_validation_nb -np 1 2 1 -res 32 32 32 -bc 4 1 4 4 3 3
+    - mpirun -np 2 ./flups_validation_nb --np=1,2,1 --res=32,32,32 --bc=4,1,4,4,3,3
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_414433_typeGreen=0.txt'))"
 
 run comm nb 1:1:
@@ -499,7 +499,7 @@ run comm nb 1:1:
     - compil comm  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb -np 2 2 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=17,17,17 --bc=3,3,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 run comm nb 2:1:
@@ -514,7 +514,7 @@ run comm nb 2:1:
     - compil comm  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bc 3 3 4 1 1 1 
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bc=3,3,4,1,1,1 
     - python3.7 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
 
 
