--- a/.gitlab-ci/flups-vector.yml
+++ b/.gitlab-ci/flups-vector.yml
@@ -19,7 +19,7 @@ run vector a2a 1:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bc 1 1 4 1 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17 --bc=1,1,4,1,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt'))"
   
 
@@ -35,7 +35,7 @@ run vector a2a 2:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bc 3 3 4 1 4 4 -l 3
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17 --bc=3,3,4,1,4,4 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt'))"
 
 run vector a2a 3:1:
@@ -50,7 +50,7 @@ run vector a2a 3:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bcv 4 4 1 4 0 0  4 4 0 4 1 1  4 4 1 4 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17 --bcv=4,4,1,4,0,0,4,4,0,4,1,1,4,4,1,4,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_441400_typeGreen=0.txt','validation_3d_CellCenter_441400_typeGreen=0.txt','validation_3d_CellCenter_440411_typeGreen=0.txt','validation_3d_CellCenter_441411_typeGreen=0.txt'))"
   
 
@@ -66,7 +66,7 @@ run vector a2a 4:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a -np 1 3 1 -res 17 17 17 -bcv 3 3 1 4 0 0  3 3 0 4 0 0  3 3 1 4 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,17 --bcv=3,3,1,4,0,0,3,3,0,4,0,0,3,3,1,4,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_331400_typeGreen=0.txt','validation_3d_CellCenter_331400_typeGreen=0.txt','validation_3d_CellCenter_330400_typeGreen=0.txt','validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -101,7 +101,7 @@ run vector nb 1:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bc 1 1 4 1 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bc=1,1,4,1,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt','validation_3d_CellCenter_114111_typeGreen=0.txt'))"
   
 
@@ -117,7 +117,7 @@ run vector nb 2:1:
     - compil dbg
   script:
     - cd ./samples/validation/ 
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bc 3 3 4 1 4 4 -l 3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bc=3,3,4,1,4,4 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt','validation_3d_CellCenter_334144_typeGreen=0.txt'))"
   
 
@@ -133,7 +133,7 @@ run vector nb 3:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bcv 4 4 1 4 0 0  4 4 0 4 1 1  4 4 1 4 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bcv=4,4,1,4,0,0,4,4,0,4,1,1,4,4,1,4,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_441400_typeGreen=0.txt','validation_3d_CellCenter_441400_typeGreen=0.txt','validation_3d_CellCenter_440411_typeGreen=0.txt','validation_3d_CellCenter_441411_typeGreen=0.txt'))"
   
 run vector nb 4:1:
@@ -148,7 +148,7 @@ run vector nb 4:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb -np 1 3 1 -res 17 17 17 -bcv 3 3 1 4 0 0  3 3 0 4 0 0  3 3 1 4 1 1 -l 3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,17 --bcv=3,3,1,4,0,0,3,3,0,4,0,0,3,3,1,4,1,1 --l=3
     - python3.7 -c "from scripts import check_res_3d; exit(check_res_3d.check_res_3d(1,'validation_3d_CellCenter_331400_typeGreen=0.txt','validation_3d_CellCenter_331400_typeGreen=0.txt','validation_3d_CellCenter_330400_typeGreen=0.txt','validation_3d_CellCenter_331411_typeGreen=0.txt'))"
 
 
