--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -34,12 +34,15 @@ compil lm3 :
     
     # Go on lm3 and compile all the libraries
     - echo -e "\e[0Ksection_start:`date +%s`:my_second_section[collapsed=true]\r\e[0KCompilation of Flups"
+    
     # Add the git config needed for h3lpr
-    - ssh lm3 echo "Host github.com-h3lpr" > ~/.ssh/config
-    - ssh lm3 echo "   Hostname github.com" >> ~/.ssh/config
+    - ssh lm3 "echo "Host github.com-h3lpr" > ~/.ssh/config"
+    - ssh lm3 "echo "   Hostname github.com" >> ~/.ssh/config"
+    
     # Compile the librairies
-    - ssh lm3 eval $(ssh-agent -s) && ssh-add <(echo "$H3LPR_SSHKEY") && ${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh #make the executable, and test if the file was created
+    - ssh lm3 "eval $(ssh-agent -s) && ssh-add <(echo "${H3LPR_SSHKEY}") && ${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh" #make the executable, and test if the file was created
     - echo -e "\e[0Ksection_end:`date +%s`:my_second_section\r\e[0K"
+    
     # Download the artifacts
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_a2a.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_nb.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
@@ -48,6 +51,7 @@ compil lm3 :
     - echo -e "\e[0Ksection_start:`date +%s`:my_third_section[collapsed=true]\r\e[0KCompilation of Google tests"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_gtest_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh
     - echo -e "\e[0Ksection_end:`date +%s`:my_third_section\r\e[0K"
+    
     #Download the artifacts
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_a2a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_nb . #we must download the EXE back to the test machine, so that the runner can archive
