--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -42,7 +42,7 @@ compil lm3 :
     - ssh-add <(echo "$H3LPR_SSHKEY")
     - echo $H3LPRKH >> ~/.ssh/known_hosts
     - git clone git@github.com:van-Rees-Lab/h3lpr.git
-    - tar -czf h3lpr_src.tar.gz --exclude=h3lpr/.git* h3lpr && du -sh h3lpr_src.tar.gz
+    - tar -czf h3lpr_src.tar.gz h3lpr && du -sh h3lpr_src.tar.gz
     # Trying to change the key before sending the data to lm3 
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSHKEY")
