:bug: Changing the submission script

--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -84,7 +84,8 @@ run lm3:
   script:
     - ssh lm3 rm -f ${PATH2RUN}/*
     - ssh lm3 mkdir -p ${PATH2RUN}/
-    - scp flups_test_nb lm3:${PATH2RUN}/                                            #sending the previously compiled exe back to lm3
+    - scp flups_test_nb lm3:${PATH2RUN}/  
+    - scp flups_test_a2a lm3:${PATH2RUN}/                                            #sending the previously compiled exe back to lm3
     - scp -r test/run/run_test.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
     - >
       ssh lm3 "cd ${PATH2RUN}/ &&
