--- a/.gitlab-ci/flups-test.yml
+++ b/.gitlab-ci/flups-test.yml
@@ -54,7 +54,7 @@ run serial a2a 3:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a --bc=3 3 1 4 1 1
+    - ./flups_validation_a2a --bc=3,3,1,4,1,1
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
   
 
@@ -70,7 +70,7 @@ run serial a2a 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - ./flups_validation_a2a --bc=3 3 0 0 1 1
+    - ./flups_validation_a2a --bc=3,3,0,0,1,1
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_330011_typeGreen=0.txt'))"
   
 
@@ -88,7 +88,7 @@ run MPI a2a 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4,4
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=0.txt'))"
   
 
@@ -104,7 +104,7 @@ run MPI a2a 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4 --k=2 
+    - mpirun -np 4 ./flups_validation_a2a --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,4,4 --kernel=2 
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=2.txt'))"
   
 
@@ -233,7 +233,7 @@ run 2d 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=0,4,4,1,9,9 --k=1
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=0,4,4,1,9,9 --kernel=1
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_044199_typeGreen=1.txt'))"
 
 run 2d 2:1:
@@ -248,7 +248,7 @@ run 2d 2:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=,17,17,1 --L=1,1,0  --bc=4,4,3,3,9,9 --k=3
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=4,4,3,3,9,9 --kernel=3
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_443399_typeGreen=3.txt'))"
 
 
@@ -264,7 +264,7 @@ run 2d 3:1:
     - compil dbg
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=1,0,4,1,9,9 --k=0
+    - mpirun -np 3 ./flups_validation_nb --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=1,0,4,1,9,9 --kernel=0
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_104199_typeGreen=0.txt'))"
     
 
@@ -280,7 +280,7 @@ run 2d 4:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=3,3,3,3,9,9 --k=1
+    - mpirun -np 3 ./flups_validation_a2a --np=1,3,1 --res=17,17,1 --L=1,1,0  --bc=3,3,3,3,9,9 --kernel=1
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333399_typeGreen=1.txt'))"
 
 
@@ -385,7 +385,7 @@ run MPI nb 1:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 4
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=0.txt'))"
   
 
@@ -401,7 +401,7 @@ run MPI nb 2:1:
     - compil dbg  
   script:
     - cd ./samples/validation/
-    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 --k=2
+    - mpirun -np 4 ./flups_validation_nb --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 --kernel=2
     - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=2.txt'))"
   
 
