--- a/.gitlab-ci/flups-lm3.yml
+++ b/.gitlab-ci/flups-lm3.yml
@@ -31,27 +31,34 @@ compil lm3 :
     - scp flups_src.tar.gz lm3:${PATH2BIN}_${TAG}
     - ssh lm3 tar -xzf ${PATH2BIN}_${TAG}/flups_src.tar.gz -C ${PATH2BIN}_${TAG}/
     - echo -e "\e[0Ksection_end:`date +%s`:my_first_section\r\e[0K"
-    
-    # Go on lm3 and compile all the libraries
+
+    #-----------------------------------------------------
+    # Retrieve the sources of H3LPR
+    # Add the git config needed for h3lpr    
     - echo -e "\e[0Ksection_start:`date +%s`:my_second_section[collapsed=true]\r\e[0KCompilation of Flups"
-    
-    # Add the git config needed for h3lpr
     - echo "Host github.com-h3lpr" >> ~/.ssh/config
     - echo "  Hostname github.com"  >> ~/.ssh/config
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$H3LPR_SSHKEY")
     - echo $H3LPRKH >> ~/.ssh/known_hosts
     - git clone git@github.com:van-Rees-Lab/h3lpr.git
+    - cd h3lpr && git checkout origin/dev-make-static && cd - 
     - tar -czf h3lpr_src.tar.gz h3lpr && du -sh h3lpr_src.tar.gz
-    # Trying to change the key before sending the data to lm3 
+    
+    # Change the key before sending the data to lm3 
     - eval $(ssh-agent -s)
     - ssh-add <(echo "$SSHKEY")
+    
+    # Send the h3lpr library to lm3
     - scp h3lpr_src.tar.gz lm3:${PATH2BIN}_${TAG}
     - ssh lm3 tar -xzf ${PATH2BIN}_${TAG}/h3lpr_src.tar.gz -C ${PATH2BIN}_${TAG}/
+    # Clean the local repo 
     - rm -rf h3lpr 
     - rm -rf h3lpr_src.tar.gz
 
-    # Compile the librairies
+    #-----------------------------------------------------
+    # Compilation of all the libraries
+    # Go on lm3 and Compile all the librairies
     - ssh lm3 "${PATH2BIN}_${TAG}/scripts/flups_auto_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh" #make the executable, and test if the file was created
     - echo -e "\e[0Ksection_end:`date +%s`:my_second_section\r\e[0K"
     
@@ -59,7 +66,9 @@ compil lm3 :
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_a2a.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/lib/libflups_nb.a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     
-    # Compile the test librairies
+    #-----------------------------------------------------
+    # Compilation of the tests
+    # Compile the Google test librairies
     - echo -e "\e[0Ksection_start:`date +%s`:my_third_section[collapsed=true]\r\e[0KCompilation of Google tests"
     - ssh lm3 ${PATH2BIN}_${TAG}/scripts/flups_gtest_build_lm3.sh ${PATH2BIN}_${TAG} ${PATH2BIN}_${TAG}/scripts/flups_loadmodule_lm3.sh
     - echo -e "\e[0Ksection_end:`date +%s`:my_third_section\r\e[0K"
@@ -67,6 +76,8 @@ compil lm3 :
     #Download the artifacts
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_a2a . #we must download the EXE back to the test machine, so that the runner can archive it as an artifact !
     - scp lm3:${PATH2BIN}_${TAG}/test/flups_test_nb . #we must download the EXE back to the test machine, so that the runner can archive
+    
+    # Clean the files 
     - echo "Done with compilation."
     - ssh lm3 rm -rf ${PATH2BIN}_${TAG}/
   
@@ -89,32 +100,16 @@ run lm3:
     - scp -r test/run/run_test.sh lm3:${PATH2RUN}/                                  #copy the slurm script from the runner
     - >
       ssh lm3 "cd ${PATH2RUN}/ &&
-      export REPORT=xml:node_nb_report.xml
-      export TYPE=NODE_NB
-      export TESTS=NodeValidation/ConvergenceTest.AllBoundaryConditions 
-      export EXEC=flups_test_nb &&
-      sbatch run_test.sh"
+      sbatch --export=REPORT='xml:node_nb_report.xml',TYPE='NODE_NB',TESTS='NodeValidation/ConvergenceTest.AllBoundaryConditions',EXEC='flups_test_nb' run_test.sh "
     - >
       ssh lm3 "cd ${PATH2RUN}/ && 
-      export REPORT=xml:node_a2a_report.xml
-      export TYPE=NODE_A2A
-      export TESTS=NodeValidation/ConvergenceTest.AllBoundaryConditions
-      export EXEC=flups_test_a2a &&
-      sbatch run_test.sh" 
+      sbatch --export=REPORT='xml:node_a2a_report.xml',TYPE='NODE_A2A',TESTS='NodeValidation/ConvergenceTest.AllBoundaryConditions',EXEC='flups_test_a2a' run_test.sh" 
     - > 
       ssh lm3 "cd ${PATH2RUN}/ && 
-      export REPORT=xml:cell_nb_report.xml
-      export TYPE=CELL_NB
-      export TESTS=CellValidation/ConvergenceTest.AllBoundaryConditions 
-      export EXEC=flups_test_nb &&
-      sbatch run_test.sh"
+      sbatch --export=REPORT='xml:cell_nb_report.xml',TYPE='CELL_NB',TESTS='CellValidation/ConvergenceTest.AllBoundaryConditions',EXEC='flups_test_nb' run_test.sh" 
     - > 
       ssh lm3 "cd ${PATH2RUN}/ && 
-      export REPORT=xml:cell_a2a_report.xml
-      export TYPE=CELL_A2A
-      export TESTS=CellValidation/ConvergenceTest.AllBoundaryConditions 
-      export EXEC=flups_test_a2a &&
-      sbatch run_test.sh"
+      sbatch --export=REPORT='xml:cell_a2a_report.xml',TYPE='CELL_A2A',TESTS='CellValidation/ConvergenceTest.AllBoundaryConditions',EXEC='flups_test_a2a' run_test.sh" 
 
 
 
@@ -125,10 +120,10 @@ check result lm3:
   rules:
    - if: ($CI_OPEN_MERGE_REQUESTS)
      when: delayed
-     start_in: 300 minutes
+     start_in: 60 minutes
    - if: ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
      when: delayed
-     start_in: 300 minutes
+     start_in: 60 minutes
   
   artifacts: 
     paths: 
