--- a/test/Makefile
+++ b/test/Makefile
@@ -31,6 +31,7 @@ include ../$(ARCH_FILE)
 #-----------------------------------------------------------------------------
 NAME := flups
 # executable naming
+TARGET_EXE_ISR := $(NAME)_test_isr
 TARGET_EXE_A2A := $(NAME)_test_a2a
 TARGET_EXE_NB := $(NAME)_test_nb
 TARGET_EXE_DPREC_A2A := $(NAME)_test_dprec_a2a
@@ -106,15 +107,18 @@ $(OBJ_DIR)/%.o : $(SRC_DIR)/%.cpp $(HEAD)
 ################################################################################
 default: all
 
-all: info $(TARGET_EXE_A2A) $(TARGET_EXE_NB) $(TARGET_EXE_DPREC_A2A) $(TARGET_EXE_DPREC_NB)
+all: info $(TARGET_EXE_A2A) $(TARGET_EXE_NB) $(TARGET_EXE_DPREC_A2A) $(TARGET_EXE_DPREC_NB) $(TARGET_EXE_ISR)
 
 all2all: $(TARGET_EXE_A2A)  
 
-nonblocking: $(TARGET_EXE_NB) 
+nonblocking: $(TARGET_EXE_NB) $(TARGET_EXE_ISR) 
 
 all2all_dprec: $(TARGET_EXE_DPREC_A2A)
 
 nonblocking: $(TARGET_EXE_DPREC_NB)
+
+$(TARGET_EXE_ISR): $(OBJ)
+	$(CXX) $(LDFLAGS)  $^ -o $@ -L$(FLUPS_LIB) -lflups_isr -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
 
 $(TARGET_EXE_A2A): $(OBJ)
 	$(CXX) $(LDFLAGS)  $^ -o $@ -L$(FLUPS_LIB) -lflups_a2a -Wl,-rpath,$(FLUPS_LIB) $(LIB) 
@@ -130,6 +134,7 @@ $(TARGET_EXE_DPREC_A2A): $(OBJ)
 
 clean:
 	rm -f $(OBJ_DIR)/*.o
+	rm -f $(TARGET_EXE_ISR)
 	rm -f $(TARGET_EXE_A2A)
 	rm -f $(TARGET_EXE_NB)
 	rm -f $(TARGET_EXE_DPREC_A2A)
