--- a/.gitlab-ci/flups-test.yml
+++ b/.gitlab-ci/flups-test.yml
@@ -537,3 +537,219 @@ run comm nb 2:1:
   
 #   dependencies:
 #     - compil google_test
+
+
+################################################################################
+# NON BLOCKING - MPI_DataType
+################################################################################
+run serial isr 1:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - ./flups_validation_isr  --bc=3,3,3,3,3,3
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_333333_typeGreen=0.txt'))"
+
+
+
+run serial isr 2:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - ./flups_validation_isr  --bc=0,1,4,4,1,1
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_014411_typeGreen=0.txt'))"
+
+
+run serial isr 3:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - ./flups_validation_isr  --bc=3,3,1,4,1,1
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
+  
+
+run serial isr 4:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - ./flups_validation_isr  --bc=3,3,0,0,1,1
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_330011_typeGreen=0.txt'))"
+  
+
+
+#checks that the code runs without error in MPI dbg
+run MPI isr 1:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=0.txt'))"
+  
+
+run MPI isr 2:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=32,32,32  --bc=4,1,1,4,4,4 --kernel=2
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411444_typeGreen=2.txt'))"
+  
+
+run MPI isr 3:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=32,32,32  --bc=3,3,1,4,1,1
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_331411_typeGreen=0.txt'))"
+  
+
+run MPI isr 4:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=32,32,32 --bc=4,1,1,4,3,3
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_411433_typeGreen=0.txt'))"
+    
+
+run MPI isr 5:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=17,17,17 --bc=4,4,3,3,1,0
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_443310_typeGreen=0.txt'))"
+  
+    
+run MPI isr 6:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 3 ./flups_validation_isr --np=1,3,1 --res=17,17,17 --bc=1,1,4,1,1,1 
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_114111_typeGreen=0.txt'))"
+  
+
+#checks that the code runs without error in MPI-OMP dbg
+run MPI-OMP isr 1:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil dbg]
+  dependencies: 
+    - compil dbg  
+  script:
+    - cd ./samples/validation/
+    - export OMP_NUM_THREADS=2
+    - echo $OMP_NUM_THREADS
+    - mpirun -np 2 ./flups_validation_isr --np=1,2,1 --res=32,32,32 --bc=4,1,4,4,3,3
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_414433_typeGreen=0.txt'))"
+
+run comm isr 1:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil comm]
+  dependencies: 
+    - compil comm  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 4 ./flups_validation_isr --np=2,2,1 --res=17,17,17 --bc=3,3,4,1,1,1 
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
+
+run comm isr 2:1:
+  stage: test
+  rules:
+    - if: ($TEST_MERGE_REQUEST == "yes") && ($CI_OPEN_MERGE_REQUESTS)
+    - if: ($TEST_PUSH_MAIN == "yes") && ($CI_COMMIT_BRANCH == $CI_DEFAULT_BRANCH)
+    - if: ($TEST_FAILEDJOB == "yes") && ($CI_COMMIT_BRANCH =~ /^[0-9]-job-failed.*$/i)
+    - if: ($TEST_BRANCH == "yes") && $CI_COMMIT_BRANCH
+  needs: [compil comm]
+  dependencies: 
+    - compil comm  
+  script:
+    - cd ./samples/validation/
+    - mpirun -np 3 ./flups_validation_isr --np=1,3,1 --res=17,17,17 --bc=3,3,4,1,1,1 
+    - python3.8 -c "from scripts import check_res; exit(check_res.check_res(1,'validation_3d_CellCenter_334111_typeGreen=0.txt'))"
+
